force-app/main/default/objects/Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional context: exception message/type, serialized payloads, variable dumps, etc.</description>
    <length>32768</length>
    <type>LongTextArea</type>
    <label>Details</label>
</CustomField>