force-app/main/default/objects/Log__c/fields/IsAsync__c.field-meta.xml
<CustomField>
    <fullName>IsAsync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this log entry was created from an async context (Queueable, Batch, Future, or Scheduled).</description>
    <label>Is Async</label>
    <type>Checkbox</type>
</CustomField>