force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The primary human-readable log message.</description>
    <length>32768</length>
    <type>LongTextArea</type>
    <label>Message</label>
</CustomField>