force-app/main/default/objects/Log__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>Optional correlation identifier supplied by the caller (e.g. record Id, integration message Id) to group related log entries.</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>