force-app/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Class and/or method that produced this log entry, e.g. MyClass.myMethod.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>