force-app/main/default/objects/Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Exception stack trace, when the log entry originates from a caught exception.</description>
    <length>32768</length>
    <type>LongTextArea</type>
    <label>Stack Trace</label>
</CustomField>