force-app/main/default/objects/Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Salesforce Request Id (Request.getCurrent().getRequestId()) for the transaction that produced this log.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>